lang2/macro/tests/ui/fail/05-forbidden-idents.stderr
error: identifiers starting with `__ink` are forbidden in ink!
  --> $DIR/05-forbidden-idents.rs:15:12
   |
15 |         fn __ink_noop(&self) {}
   |            ^^^^^^^^^^
